[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synera-openenv"
version = "1.0.0"
description = "Synera Triage OpenEnv - Clinical triage RL environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "httpx",
    "openai"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entry_point = "inference.py"
environment = "synera-openenv"